// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'acala' to 'parallel' using bridgeSDK cross-chain 'ACA' > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": "(rounded 8)",
  "toChain": "(rounded 102)",
}
`;

exports[`'acala' to 'parallel' using bridgeSDK cross-chain 'ACA' > fee 1`] = `"(rounded 0.1)"`;

exports[`'acala' to 'parallel' using bridgeSDK cross-chain 'ACA' > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 10,
  "toChain": 100,
}
`;

exports[`'acala' to 'parallel' using bridgeSDK cross-chain 'PARA' > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 8,
  "toChain": "(rounded 1000)",
}
`;

exports[`'acala' to 'parallel' using bridgeSDK cross-chain 'PARA' > fee 1`] = `"(rounded 1)"`;

exports[`'acala' to 'parallel' using bridgeSDK cross-chain 'PARA' > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 10,
  "toChain": 1000,
}
`;
